[gd_scene load_steps=13 format=3 uid="uid://2stxk6mbvwbv"]

[ext_resource type="Script" path="res://scripts/main/stage.gd" id="1_omf30"]
[ext_resource type="PackedScene" uid="uid://d37tw2m7yrog0" path="res://components/misc/stage_effects.tscn" id="2_82lgj"]
[ext_resource type="Script" path="res://scripts/main/stage_agent.gd" id="3_kgn4f"]
[ext_resource type="Script" path="res://scripts/main/turn_manager.gd" id="4_prveq"]
[ext_resource type="Resource" uid="uid://bhavpgvghw8tl" path="res://scenes/stages/stage_schedules/first_stage.tres" id="5_olc4u"]
[ext_resource type="TileSet" uid="uid://b4eq1ur4r1nxo" path="res://components/tilesets/default_tileset.tres" id="6_eds4h"]
[ext_resource type="Script" path="res://scripts/main/nexus.gd" id="7_boe6g"]
[ext_resource type="PackedScene" uid="uid://4cpjktoig8qa" path="res://components/systems/light_area_component.tscn" id="7_ent1l"]
[ext_resource type="PackedScene" uid="uid://5si7n88ll4im" path="res://components/systems/mouse_light.tscn" id="8_583ix"]
[ext_resource type="Texture2D" uid="uid://cvxpar4w3yb3t" path="res://assets/temp/neutral_point_2d.webp" id="9_jysst"]
[ext_resource type="PackedScene" uid="uid://duxknnynvh60n" path="res://scenes/ui/stage_camera.tscn" id="10_eexex"]

[sub_resource type="Curve2D" id="Curve2D_v06dm"]

[node name="StageRoot" type="Node2D" node_paths=PackedStringArray("modulate_layer")]
process_mode = 3
script = ExtResource("1_omf30")
modulate_layer = NodePath("StageEffects/DarknessLayer")
check_coordinate = true
stage_songs = Array[String](["Active SL2024-08-07"])

[node name="StageEffects" parent="." instance=ExtResource("2_82lgj")]

[node name="StageAgent" type="Node" parent="."]
script = ExtResource("3_kgn4f")

[node name="TurnManager" type="Node" parent="StageAgent"]
process_mode = 1
script = ExtResource("4_prveq")
turn_schedule = ExtResource("5_olc4u")
infinite = true

[node name="SpawnTimer" type="Timer" parent="StageAgent/TurnManager"]
process_mode = 1
process_callback = 0
one_shot = true

[node name="GroundLayer" type="TileMapLayer" parent="."]
use_parent_material = true
tile_set = ExtResource("6_eds4h")

[node name="ObjectLayer" type="TileMapLayer" parent="."]
modulate = Color(2, 2, 2, 1)
z_index = 25
use_parent_material = true
tile_set = ExtResource("6_eds4h")

[node name="ForegroundLayer" type="TileMapLayer" parent="."]
z_index = 5
use_parent_material = true
tile_set = ExtResource("6_eds4h")
navigation_enabled = false

[node name="InteractionLayer" type="TileMapLayer" parent="."]
z_index = 25
use_parent_material = true
tile_set = ExtResource("6_eds4h")
navigation_enabled = false

[node name="Nexus" type="Node2D" parent="." groups=["nexus"]]
position = Vector2(768, 360)
script = ExtResource("7_boe6g")

[node name="LightAreaComponent" parent="." instance=ExtResource("7_ent1l")]

[node name="MouseLight" parent="LightAreaComponent" groups=["mouse_light"] instance=ExtResource("8_583ix")]
shadow_enabled = false

[node name="Containers" type="Node2D" parent="."]
process_mode = 1

[node name="SpawnPositions" type="Node2D" parent="Containers"]

[node name="SpawnPosition" type="Marker2D" parent="Containers/SpawnPositions"]
position = Vector2(32, 360)

[node name="SpawnGlow" type="PointLight2D" parent="Containers/SpawnPositions/SpawnPosition"]
color = Color(0.533483, 1.8049e-07, 0.135244, 1)
energy = 3.0
range_item_cull_mask = 7
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.486275)
shadow_item_cull_mask = 6
texture = ExtResource("9_jysst")
texture_scale = 0.5
height = 100.0

[node name="EntityContainer" type="Node2D" parent="Containers"]

[node name="ObjectContainer" type="Node2D" parent="Containers"]

[node name="ProjectileContainer" type="Node2D" parent="Containers"]

[node name="CoinContainer" type="Node2D" parent="Containers"]

[node name="StagePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_v06dm")

[node name="StageCamera" parent="." instance=ExtResource("10_eexex")]
position = Vector2(640, 360)
limit_smoothed = false
min_zoom = 0.5

[connection signal="health_updated" from="StageAgent" to="StageAgent" method="_on_health_updated"]
[connection signal="schedule_finished" from="StageAgent/TurnManager" to="StageAgent/TurnManager" method="_on_schedule_finished"]

[editable path="StageEffects"]
